examples/python/dxbridge_ctypes.py

from __future__ import annotations

import ctypes
import os
from pathlib import Path


DXBRIDGE_NULL_HANDLE = 0
DXBRIDGE_STRUCT_VERSION = 1

DXB_OK = 0
DXB_E_INVALID_HANDLE = -1
DXB_E_DEVICE_LOST = -2
DXB_E_OUT_OF_MEMORY = -3
DXB_E_INVALID_ARG = -4
DXB_E_NOT_SUPPORTED = -5
DXB_E_SHADER_COMPILE = -6
DXB_E_NOT_INITIALIZED = -7
DXB_E_INVALID_STATE = -8
DXB_E_INTERNAL = -999

RESULT_NAMES = {
    DXB_OK: "DXB_OK",
    DXB_E_INVALID_HANDLE: "DXB_E_INVALID_HANDLE",
    DXB_E_DEVICE_LOST: "DXB_E_DEVICE_LOST",
    DXB_E_OUT_OF_MEMORY: "DXB_E_OUT_OF_MEMORY",
    DXB_E_INVALID_ARG: "DXB_E_INVALID_ARG",
    DXB_E_NOT_SUPPORTED: "DXB_E_NOT_SUPPORTED",
    DXB_E_SHADER_COMPILE: "DXB_E_SHADER_COMPILE",
    DXB_E_NOT_INITIALIZED: "DXB_E_NOT_INITIALIZED",
    DXB_E_INVALID_STATE: "DXB_E_INVALID_STATE",
    DXB_E_INTERNAL: "DXB_E_INTERNAL",
}

DXB_BACKEND_AUTO = 0
DXB_BACKEND_DX11 = 1
DXB_BACKEND_DX12 = 2

BACKEND_NAMES = {
    "auto": DXB_BACKEND_AUTO,
    "dx11": DXB_BACKEND_DX11,
    "dx12": DXB_BACKEND_DX12,
}

DXB_FORMAT_UNKNOWN = 0
DXB_FORMAT_RGBA8_UNORM = 1
DXB_FORMAT_D32_FLOAT = 3
DXB_FORMAT_RG32_FLOAT = 6
DXB_FORMAT_RGB32_FLOAT = 7

DXB_DEVICE_FLAG_DEBUG = 0x0001
DXB_DEVICE_FLAG_GPU_VALIDATION = 0x0002

DXB_BUFFER_FLAG_VERTEX = 0x0001
DXB_BUFFER_FLAG_DYNAMIC = 0x0008

DXB_SHADER_STAGE_VERTEX = 0
DXB_SHADER_STAGE_PIXEL = 1

DXB_PRIM_TRIANGLELIST = 0

DXB_SEMANTIC_POSITION = 0
DXB_SEMANTIC_COLOR = 3

DXB_COMPILE_DEBUG = 0x0001

DXB_FEATURE_DX12 = 0x0001

DXB_CAPABILITY_BACKEND_AVAILABLE = 1
DXB_CAPABILITY_DEBUG_LAYER_AVAILABLE = 2
DXB_CAPABILITY_GPU_VALIDATION_AVAILABLE = 3
DXB_CAPABILITY_ADAPTER_COUNT = 4
DXB_CAPABILITY_ADAPTER_SOFTWARE = 5
DXB_CAPABILITY_ADAPTER_MAX_FEATURE_LEVEL = 6

LOG_LEVEL_NAMES = {
    0: "INFO",
    1: "WARN",
    2: "ERROR",
}

DXBDevice = ctypes.c_uint64
DXBSwapChain = ctypes.c_uint64
DXBRenderTarget = ctypes.c_uint64
DXBRTV = ctypes.c_uint64
DXBDSV = ctypes.c_uint64
DXBBuffer = ctypes.c_uint64
DXBShader = ctypes.c_uint64
DXBPipeline = ctypes.c_uint64
DXBInputLayout = ctypes.c_uint64

DXBLogCallback = ctypes.CFUNCTYPE(None, ctypes.c_int, ctypes.c_char_p, ctypes.c_void_p)


class DXBAdapterInfo(ctypes.Structure):
    _fields_ = [
        ("struct_version", ctypes.c_uint32),
        ("index", ctypes.c_uint32),
        ("description", ctypes.c_char * 128),
        ("dedicated_video_mem", ctypes.c_uint64),
        ("dedicated_system_mem", ctypes.c_uint64),
        ("shared_system_mem", ctypes.c_uint64),
        ("is_software", ctypes.c_uint32),
    ]


class DXBDeviceDesc(ctypes.Structure):
    _fields_ = [
        ("struct_version", ctypes.c_uint32),
        ("backend", ctypes.c_uint32),
        ("adapter_index", ctypes.c_uint32),
        ("flags", ctypes.c_uint32),
    ]


class DXBSwapChainDesc(ctypes.Structure):
    _fields_ = [
        ("struct_version", ctypes.c_uint32),
        ("hwnd", ctypes.c_void_p),
        ("width", ctypes.c_uint32),
        ("height", ctypes.c_uint32),
        ("format", ctypes.c_uint32),
        ("buffer_count", ctypes.c_uint32),
        ("flags", ctypes.c_uint32),
    ]


class DXBBufferDesc(ctypes.Structure):
    _fields_ = [
        ("struct_version", ctypes.c_uint32),
        ("flags", ctypes.c_uint32),
        ("byte_size", ctypes.c_uint32),
        ("stride", ctypes.c_uint32),
    ]


class DXBShaderDesc(ctypes.Structure):
    _fields_ = [
        ("struct_version", ctypes.c_uint32),
        ("stage", ctypes.c_uint32),
        ("source_code", ctypes.c_char_p),
        ("source_size", ctypes.c_uint32),
        ("source_name", ctypes.c_char_p),
        ("entry_point", ctypes.c_char_p),
        ("target", ctypes.c_char_p),
        ("compile_flags", ctypes.c_uint32),
    ]


class DXBInputElementDesc(ctypes.Structure):
    _fields_ = [
        ("struct_version", ctypes.c_uint32),
        ("semantic", ctypes.c_uint32),
        ("semantic_index", ctypes.c_uint32),
        ("format", ctypes.c_uint32),
        ("input_slot", ctypes.c_uint32),
        ("byte_offset", ctypes.c_uint32),
    ]


class DXBPipelineDesc(ctypes.Structure):
    _fields_ = [
        ("struct_version", ctypes.c_uint32),
        ("vs", DXBShader),
        ("ps", DXBShader),
        ("input_layout", DXBInputLayout),
        ("topology", ctypes.c_uint32),
        ("depth_test", ctypes.c_uint32),
        ("depth_write", ctypes.c_uint32),
        ("cull_back", ctypes.c_uint32),
        ("wireframe", ctypes.c_uint32),
    ]


class DXBViewport(ctypes.Structure):
    _fields_ = [
        ("x", ctypes.c_float),
        ("y", ctypes.c_float),
        ("width", ctypes.c_float),
        ("height", ctypes.c_float),
        ("min_depth", ctypes.c_float),
        ("max_depth", ctypes.c_float),
    ]


class DXBCapabilityQuery(ctypes.Structure):
    _fields_ = [
        ("struct_version", ctypes.c_uint32),
        ("capability", ctypes.c_uint32),
        ("backend", ctypes.c_uint32),
        ("adapter_index", ctypes.c_uint32),
        ("format", ctypes.c_uint32),
        ("_padding", ctypes.c_uint32),
        ("device", DXBDevice),
        ("reserved", ctypes.c_uint32 * 4),
    ]


class DXBCapabilityInfo(ctypes.Structure):
    _fields_ = [
        ("struct_version", ctypes.c_uint32),
        ("capability", ctypes.c_uint32),
        ("backend", ctypes.c_uint32),
        ("adapter_index", ctypes.c_uint32),
        ("supported", ctypes.c_uint32),
        ("value_u32", ctypes.c_uint32),
        ("value_u64", ctypes.c_uint64),
        ("reserved", ctypes.c_uint32 * 4),
    ]


def parse_version(version: int) -> str:
    major = (version >> 16) & 0xFF
    minor = (version >> 8) & 0xFF
    patch = version & 0xFF
    return f"{major}.{minor}.{patch}"


def format_hresult(value: int) -> str:
    return f"0x{value & 0xFFFFFFFF:08X}"


def format_bytes(value: int) -> str:
    units = ["B", "KiB", "MiB", "GiB", "TiB"]
    amount = float(value)
    unit = units[0]
    for unit in units:
        if amount < 1024.0 or unit == units[-1]:
            break
        amount /= 1024.0
    if unit == "B":
        return f"{int(amount)} {unit}"
    return f"{amount:.1f} {unit}"


def format_feature_level(value: int) -> str:
    if value == 0:
        return "n/a"
    major = (value >> 12) & 0xF
    minor = (value >> 8) & 0xF
    if major == 0 and minor == 0:
        return format_hresult(value)
    return f"{major}_{minor}"


def make_versioned(struct_type, **values):
    instance = struct_type()
    if hasattr(instance, "struct_version"):
        instance.struct_version = DXBRIDGE_STRUCT_VERSION
    for name, value in values.items():
        setattr(instance, name, value)
    return instance


def locate_dxbridge_dll(explicit_path: str | None = None) -> Path:
    candidates: list[Path] = []
    if explicit_path:
        candidates.append(Path(explicit_path))

    env_path = os.environ.get("DXBRIDGE_DLL")
    if env_path:
        candidates.append(Path(env_path))

    script_dir = Path(__file__).resolve().parent
    repo_root = script_dir.parents[1]
    candidates.extend(
        [
            Path.cwd() / "dxbridge.dll",
            script_dir / "dxbridge.dll",
            repo_root / "out" / "build" / "debug" / "Debug" / "dxbridge.dll",
            repo_root
            / "out"
            / "build"
            / "debug"
            / "examples"
            / "Debug"
            / "dxbridge.dll",
            repo_root / "out" / "build" / "debug" / "tests" / "Debug" / "dxbridge.dll",
            repo_root / "out" / "build" / "release" / "Release" / "dxbridge.dll",
            repo_root
            / "out"
            / "build"
            / "release"
            / "examples"
            / "Release"
            / "dxbridge.dll",
            repo_root
            / "out"
            / "build"
            / "release"
            / "tests"
            / "Release"
            / "dxbridge.dll",
            repo_root / "out" / "build" / "ci" / "Release" / "dxbridge.dll",
        ]
    )

    for candidate in candidates:
        resolved = candidate.expanduser().resolve()
        if resolved.is_file():
            return resolved

    searched = "\n  - ".join(str(path) for path in candidates)
    raise FileNotFoundError(
        "Could not locate dxbridge.dll. Set DXBRIDGE_DLL or pass --dll.\n"
        f"Searched:\n  - {searched}"
    )


class DXBridgeError(RuntimeError):
    pass


class DXBridgeLibrary:
    def __init__(self, dll_path: str | None = None):
        self.path = locate_dxbridge_dll(dll_path)
        self.dll = ctypes.CDLL(str(self.path))
        self._callback_ref = None
        self._configure_prototypes()

    def _configure_prototypes(self) -> None:
        self.dll.DXBridge_SetLogCallback.argtypes = [DXBLogCallback, ctypes.c_void_p]
        self.dll.DXBridge_SetLogCallback.restype = None

        self.dll.DXBridge_Init.argtypes = [ctypes.c_uint32]
        self.dll.DXBridge_Init.restype = ctypes.c_int32

        self.dll.DXBridge_Shutdown.argtypes = []
        self.dll.DXBridge_Shutdown.restype = None

        self.dll.DXBridge_GetVersion.argtypes = []
        self.dll.DXBridge_GetVersion.restype = ctypes.c_uint32

        self.dll.DXBridge_SupportsFeature.argtypes = [ctypes.c_uint32]
        self.dll.DXBridge_SupportsFeature.restype = ctypes.c_uint32

        self.dll.DXBridge_QueryCapability.argtypes = [
            ctypes.POINTER(DXBCapabilityQuery),
            ctypes.POINTER(DXBCapabilityInfo),
        ]
        self.dll.DXBridge_QueryCapability.restype = ctypes.c_int32

        self.dll.DXBridge_GetLastError.argtypes = [ctypes.c_char_p, ctypes.c_int]
        self.dll.DXBridge_GetLastError.restype = None

        self.dll.DXBridge_GetLastHRESULT.argtypes = []
        self.dll.DXBridge_GetLastHRESULT.restype = ctypes.c_uint32

        self.dll.DXBridge_EnumerateAdapters.argtypes = [
            ctypes.POINTER(DXBAdapterInfo),
            ctypes.POINTER(ctypes.c_uint32),
        ]
        self.dll.DXBridge_EnumerateAdapters.restype = ctypes.c_int32

        self.dll.DXBridge_CreateDevice.argtypes = [
            ctypes.POINTER(DXBDeviceDesc),
            ctypes.POINTER(DXBDevice),
        ]
        self.dll.DXBridge_CreateDevice.restype = ctypes.c_int32

        self.dll.DXBridge_DestroyDevice.argtypes = [DXBDevice]
        self.dll.DXBridge_DestroyDevice.restype = None

        self.dll.DXBridge_GetFeatureLevel.argtypes = [DXBDevice]
        self.dll.DXBridge_GetFeatureLevel.restype = ctypes.c_uint32

        self.dll.DXBridge_CreateSwapChain.argtypes = [
            DXBDevice,
            ctypes.POINTER(DXBSwapChainDesc),
            ctypes.POINTER(DXBSwapChain),
        ]
        self.dll.DXBridge_CreateSwapChain.restype = ctypes.c_int32

        self.dll.DXBridge_DestroySwapChain.argtypes = [DXBSwapChain]
        self.dll.DXBridge_DestroySwapChain.restype = None

        self.dll.DXBridge_ResizeSwapChain.argtypes = [
            DXBSwapChain,
            ctypes.c_uint32,
            ctypes.c_uint32,
        ]
        self.dll.DXBridge_ResizeSwapChain.restype = ctypes.c_int32

        self.dll.DXBridge_GetBackBuffer.argtypes = [
            DXBSwapChain,
            ctypes.POINTER(DXBRenderTarget),
        ]
        self.dll.DXBridge_GetBackBuffer.restype = ctypes.c_int32

        self.dll.DXBridge_CreateRenderTargetView.argtypes = [
            DXBDevice,
            DXBRenderTarget,
            ctypes.POINTER(DXBRTV),
        ]
        self.dll.DXBridge_CreateRenderTargetView.restype = ctypes.c_int32

        self.dll.DXBridge_DestroyRTV.argtypes = [DXBRTV]
        self.dll.DXBridge_DestroyRTV.restype = None

        self.dll.DXBridge_CreateDepthStencilView.argtypes = [
            DXBDevice,
            ctypes.c_void_p,
            ctypes.POINTER(DXBDSV),
        ]
        self.dll.DXBridge_CreateDepthStencilView.restype = ctypes.c_int32

        self.dll.DXBridge_DestroyDSV.argtypes = [DXBDSV]
        self.dll.DXBridge_DestroyDSV.restype = None
